# anota-api-python

./: .gitignore  README.es.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: end_to_end.py
src/anota_api/: __init__.py
tests/: test_client.py
